Make sure too-long text wraps to a new line. Fixes #23.

--- a/style.css
+++ b/style.css
@@ -631,6 +631,7 @@ a:hover, a:active {
 	margin-bottom: 0;
 	text-align: center;
 	text-shadow: 0px 3px 1px #54616f;
+	word-wrap: break-word;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -651,6 +652,7 @@ a:hover, a:active {
 	font-family: "Lato", Helvetica, sans-serif;
 	margin-top: 0;
 	text-align: center;
+	word-wrap: break-word;
 }
 
 /*--------------------------------------------------------------
@@ -988,9 +990,10 @@ a:hover, a:active {
 --------------------------------------------------------------*/
 .widget {
 	margin: 0 0 1.5em;
-	/* Make sure select elements fit in widgets. */
+	word-wrap: break-word;
 }
 
+/* Make sure select elements fit in widgets. */
 .widget select {
 	max-width: 100%;
 }
@@ -1412,6 +1415,7 @@ a:hover, a:active {
 	max-width: 92%;
 	margin-left: auto;
 	margin-right: auto;
+	word-wrap: break-word;
 }
 
 /* Entry footer */
